# MnistNN

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp
config/: config.yaml
src/: ActivationLayer.cpp  ActivationLayer.h  Batch.h  Dataloader.cpp  Dataloader.h  Dataset.cpp  Dataset.h  DenseLayer.cpp  DenseLayer.h  EarlyStopping.cpp  EarlyStopping.h  Evaluation.cpp  Evaluation.h  InputLayer.cpp  InputLayer.h  Layer.h  Loss.cpp  Loss.h  Optimizer.cpp  Optimizer.h  Scheduler.cpp  Scheduler.h  Sequential.cpp  Sequential.h  Tensor.cpp  Tensor.h  Trainer.cpp  Trainer.h  Transformation.cpp  Transformation.h  View.h  debug.h
